--- a/tips/es.po
+++ b/tips/es.po
@@ -2,21 +2,21 @@
 # Copyright © 2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gimp 1.3.X package.
 # Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.
-# Pablo del Campo <pablodc@bigfoot.com>, 2003.
 # Pablo G. del Campo <pablodc@bigfoot.com>, 2003, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
-"PO-Revision-Date: 2004-01-07 17:11-0300\n"
+"POT-Creation-Date: 2004-01-27 13:36+0100\n"
+"PO-Revision-Date: 2004-01-27 16:04-0300\n"
 "Last-Translator: Pablo G. del Campo <pablodc@bigfoot.com>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: tips/gimp-tips.xml.in.h:1
 msgid "<big>Welcome to The GIMP !</big>"
@@ -47,10 +47,9 @@ msgstr ""
 "que ésta utilice el color de fondo en lugar del color de frente."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "Al presionar <tt>Ctrl</tt> y arrastrar con la herramienta de rotación "
 "limitará la rotación a ángulos de 15 grados."
@@ -77,12 +76,11 @@ msgstr ""
 "«Capas» o utilice los menús para hacer lo mismo."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Luego de habilitar las «Combinaciones de teclas dinámicas» en el diálogo de "
 "preferencias puede reasignar combinaciones de teclas. Haga esto abriendo el "
@@ -114,11 +112,10 @@ msgstr ""
 "Curvas)."
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 "Si traza una ruta (Editar-&gt;Selección de trazo) las herramientas de "
 "pintura pueden ser utilizadas con sus configuraciones actuales. Puede usar "
@@ -135,10 +132,9 @@ msgstr ""
 "herramientas y otros diálogos."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "La mayoría de los complementos trabajan sobre la capa actual de la imagen "
@@ -156,12 +152,11 @@ msgstr ""
 "errores..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "No todos los efectos pueden ser aplicados a todos los tipos de imágenes. "
 "Esto se indica por una entrada de menú de color gris claro. Puede que "
@@ -239,18 +234,6 @@ msgstr ""
 "de las guías y la selección resultante sólo tocará las guías."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Puede dibujar círculos o rectángulos simples utilizando Editar-&gt;Seleccion "
-"de trazo. Esto traza el borde de su selección actual. Se pueden dibujar "
-"formas mas complejas utilizando la herramienta Ruta o con Filtros-&gt;"
-"Renderizar-&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -262,7 +245,7 @@ msgstr ""
 "de dibujo hasta la posición actual del cursor. Si también presiona <tt>Ctrl</"
 "tt> la línea se limitará a ángulos de 15 grados."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -275,12 +258,18 @@ msgstr ""
 "trabajo. Una vez que su proyecto está terminado puede guardarla como JPEG, "
 "PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Puede ajustar y resituar una selección utilizando <tt>Alt</tt> y arrastrando."
+"Puede ajustar y reemplazar una selección utilizando <tt>ALT</tt> y "
+"arrastrar. Si esto hace que la ventana se mueva su administrador de ventanas "
+"ya utiliza la tecla <tt>ALT</tt>. Intente presionar <tt>Shift</tt> al mismo "
+"tiempo."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -288,10 +277,9 @@ msgstr ""
 "Puede ajustar el rango de selección de la selección difusa pulsando y "
 "arrastrando de izquierda a derecha."
 
-#: tips/gimp-tips.xml.in.h:27
-#, fuzzy
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -299,7 +287,7 @@ msgstr ""
 "diálogo de rutas le permite trabajar sobre múltiples rutas y convertirlas en "
 "selecciones."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -307,7 +295,7 @@ msgstr ""
 "Puede arrastrar un capa desde el diálogo de «Capas» y soltarla sobre la caja "
 "de herramientas. Esto creará un imagen nueva conteniendo sólo esa capa."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -316,6 +304,17 @@ msgstr ""
 "Puede arrastrar y soltar muchas cosas en El GIMP. Por ejemplo arrastrar un "
 "color desde la caja de herramientas o desde una paleta de colores y soltarlo "
 "sobre una imagen rellenará la imagen actual o la selección con ese color."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Puede dibujar círculos o rectángulos simples utilizando Editar-&gt;Seleccion "
+"de trazo. Esto traza el borde de su selección actual. Se pueden dibujar "
+"formas mas complejas utilizando la herramienta Ruta o con Filtros-&gt;"
+"Renderizar-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -386,24 +385,3 @@ msgstr ""
 "imagen y pulse otra vez sobre el botón para convertirla de nuevo en una "
 "selección normal."
 
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
-#~ msgstr ""
-#~ "Puede ajustar y reemplazar una selección utilizando <tt>ALT</tt> y "
-#~ "arrastrar. Si esto hace que la ventana se mueva su administrador de "
-#~ "ventanas ya utiliza la tecla <tt>ALT</tt>. Intente presionar <tt>Shift</"
-#~ "tt> al mismo tiempo."
-
-#~ msgid ""
-#~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
-#~ "Most X servers support scalable Type 1 Postscript fonts. Download and "
-#~ "install them. Some font servers allow you to use TrueType (<tt>.ttf</tt>) "
-#~ "fonts, which are also scalable."
-#~ msgstr ""
-#~ "Si el borde de sus tipografías parece escalonadas, eso se debe a que no "
-#~ "son tipografías escalables. La mayoría de los servidores X soportan "
-#~ "tipografías escalables «Type 1». Descárguelas e instálelas. Algunos "
-#~ "servidores de tipografías le permiten utilizar tipografías TrueType (<tt>."
-#~ "ttf</tt>) que también son escalables."
