2004-01-27  Manish Singh  <yosh@gimp.org>
        * configure.in: use AM_PATH_GIMPPRINT to get some additional
        sanity checks.

        * acinclude.m4: define AM_PATH_GIMPPRINT here, so we don't have
        add a new autogen dependency.

        * plug-ins/print/Makefile.am: Use GIMPPRINT_{CFLAGS,LIBS}


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12201 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-27  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: use AM_PATH_GIMPPRINT to get some additional
+	sanity checks.
+
+	* acinclude.m4: define AM_PATH_GIMPPRINT here, so we don't have
+	add a new autogen dependency.
+
+	* plug-ins/print/Makefile.am: Use GIMPPRINT_{CFLAGS,LIBS}
+
 2004-01-28  Simon Budig  <simon@gimp.org>
 
 	Argh, this is getting silly.
