--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-01-27  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/common/plugindetails.c: removed unused variable.
+
+	* plug-ins/common/nlfilt.c: declare nlfiltRow as inline in the
+	function definition as well.
+
+2004-01-27  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: use AM_PATH_GIMPPRINT to get some additional
 	sanity checks.
 
