--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-27  Manish Singh  <yosh@gimp.org>
 
+	* app/composite/gimp-composite-generic.c
+	(gimp_composite_overlay_any_any_any_generic)
+	* app/paint-funcs/paint-funcs-generic.h (overlay_pixels): use more
+	than one temporary when stacking INT_MULTs, to avoid undefined
+	values.
+
+2004-01-27  Manish Singh  <yosh@gimp.org>
+
 	* app/paint/gimppaintcore.c (gimp_paint_core_interpolate): Use a real
 	GimpVector2 for vector operations, instead of stuffing everything
 	into a GimpCoords. C99 aliasing fix.
