2004-01-27  Manish Singh  <yosh@gimp.org>
        * app/paint-funcs/paint-funcs.c: inlined rotate_pointers, changed
        prototypes and casts around so that we're compliant with C99 aliasing
        rules.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12205 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-27  Manish Singh  <yosh@gimp.org>
 
+	* app/paint-funcs/paint-funcs.c: inlined rotate_pointers, changed
+	prototypes and casts around so that we're compliant with C99 aliasing
+	rules.
+
+2004-01-27  Manish Singh  <yosh@gimp.org>
+
 	* app/composite/gimp-composite-generic.c
 	(gimp_composite_overlay_any_any_any_generic)
 	* app/paint-funcs/paint-funcs-generic.h (overlay_pixels): use more
