2004-01-28  Manish Singh  <yosh@gimp.org>
        * plug-ins/script-fu/siod-wrapper.c (marshall_proc_db_call): validate
        the types of the individual list members when passing parasites.
        Fixes #93806.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12206 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-28  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/script-fu/siod-wrapper.c (marshall_proc_db_call): validate
+	the types of the individual list members when passing parasites.
+	Fixes #93806.
+
 2004-01-27  Manish Singh  <yosh@gimp.org>
 
 	* app/paint-funcs/paint-funcs.c: inlined rotate_pointers, changed
