2004-01-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphelp-ids.h: updated help IDs for new/reordered
	pages in the prefs dialog.

	* app/gui/preferences-dialog.c (prefs_dialog_new): changed
	accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12207 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimphelp-ids.h: updated help IDs for new/reordered
+	pages in the prefs dialog.
+
+	* app/gui/preferences-dialog.c (prefs_dialog_new): changed
+	accordingly.
+
 2004-01-28  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/script-fu/siod-wrapper.c (marshall_proc_db_call): validate
