2004-01-28  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/script-fu/scripts/grid-system.scm: Fix typo that prevented
	using the inverse of the golden ratio (1/g) as a weight in the list.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12208 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/script-fu/scripts/grid-system.scm: Fix typo that prevented
+	using the inverse of the golden ratio (1/g) as a weight in the list.
+
 2004-01-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimphelp-ids.h: updated help IDs for new/reordered
