2004-01-28  Michael Natterer  <mitch@gimp.org>
	* app/config/gimpconfig-path.c (gimp_config_path_expand): return
	early if gimp_config_path_expand_only() fails.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12210 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/config/gimpconfig-path.c (gimp_config_path_expand): return
+	early if gimp_config_path_expand_only() fails.
+
 2004-01-28  Dave Neary  <bolsh@gimp.org>
 
 	* plug-ins/common/tiff.c: Removed duplicate TIFF entry from save 
