2004-01-28  Sven Neumann  <sven@gimp.org>
	* configure.in: according to the automake docs, we need to add
	$(EXEEXT) explicitely for programs that are conditionally built
	using configure substitutions instead of automake conditionals.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12211 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-28  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: according to the automake docs, we need to add
+	$(EXEEXT) explicitely for programs that are conditionally built
+	using configure substitutions instead of automake conditionals.
+
 2004-01-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/config/gimpconfig-path.c (gimp_config_path_expand): return
