2004-01-28  Michael Natterer  <mitch@gimp.org>
	* libgimpbase/tmpl/gimpdatafiles.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimppatheditor.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12214 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-28  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpbase/tmpl/gimpdatafiles.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimppatheditor.sgml: updated.
+
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
